# efl-entry

./: .gitmodules  CMakeLists.txt  README.md
cmake/: SetEntryPoint.cmake  SetInternals.cmake
include/efl/: Entry.hpp
src/: EntryMain.cpp  EntryShared.cpp  Internal.hpp  main-entry.cpp  main-internal.hpp  shared-entry.cpp
